# pr2_collision_checker

./: CMakeLists.txt  README.md  manifest.xml
config/: pr2_body.yaml  pr2_both_arms.yaml  pr2_left_arm.cfg  pr2_right_arm.cfg
include/pr2_collision_checker/: body_pose.h  pr2_collision_space.h  pr2_collision_space_interface.h  pr2_collision_space_monitor.h  sbpl_arm_model.h  sbpl_arm_planning_error_codes.h
launch/: bringup_map.launch  pr2_collision_space_demo.launch
src/: pr2_collision_space.cpp  pr2_collision_space_interface.cpp  pr2_collision_space_monitor.cpp  sbpl_arm_model.cpp  test_pr2_collision_checker.cpp  test_pr2_collision_checker_tar.cpp
src/test/: test_pr2_collision_checker_tar.cpp
